--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "knip": "knip"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.84.1",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
